--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <base href='/frontend/'>
+    <base href='/'>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/logo.png" />
     <link rel="icon" type="image/png" href="./assets/img/logo.png" />
@@ -28,6 +28,6 @@
             <div class="preloader-progress-bar"></div>
         </div>
     </div>
-<script src="runtime-es2015.66c79b9d36e7169e27b0.js" type="module"></script><script src="runtime-es5.66c79b9d36e7169e27b0.js" nomodule defer></script><script src="polyfills-es5.f44d0ef3795548174dce.js" nomodule defer></script><script src="polyfills-es2015.ce7f3c03564dcbeeffdb.js" type="module"></script><script src="scripts.1f8668568a05354d890f.js" defer></script><script src="main-es2015.4bbe640695fd1ffae271.js" type="module"></script><script src="main-es5.4bbe640695fd1ffae271.js" nomodule defer></script></body>
+<script src="runtime-es2015.66c79b9d36e7169e27b0.js" type="module"></script><script src="runtime-es5.66c79b9d36e7169e27b0.js" nomodule defer></script><script src="polyfills-es5.f44d0ef3795548174dce.js" nomodule defer></script><script src="polyfills-es2015.ce7f3c03564dcbeeffdb.js" type="module"></script><script src="scripts.1f8668568a05354d890f.js" defer></script><script src="main-es2015.537c5aa374d0d082dd81.js" type="module"></script><script src="main-es5.537c5aa374d0d082dd81.js" nomodule defer></script></body>
 
 </html>
